<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Tatu</string>
    <string name="jugar">Jugar</string>
    <string name="imagen">Imagen</string>

    <string name="volver">Volver</string>
    <string name="empezar">Empezar</string>

    <string name="cartel_meta">(~˘▾˘)~  ¡GANASTE!  ~(˘▾˘~)</string>
    <string name="cartel_parada">Llegaste a una parada</string>
    <string name="cartel_parada_visitada">Ya habias visitado esta parada</string>
    <string name="cartel_paradas_faltantes">Te falta pasar por algunas paradas</string>
    <string name="cartel_error">ERROR: Intentaste acceder a una casilla bloqueada o fuera del límite del mapa</string>
    <string name="cartel_no_llego">No llegaste a la meta</string>
    <string name="cartel_neutro" />

    <string name="intro_stem">Educación STEM\nen escuelas primarias</string>
    <string name="comandos" tools:ignore="Typos">Comandos</string>
    <string name="ins_izquierda">Gira sobre el lugar hacia la izquierda.</string>
    <string name="ins_adelante">Avanza una casilla hacia donde esta mirando.</string>
    <string name="ins_derecha">Gira sobre el lugar hacia la derecha.</string>
    <string name="ins_interactuar">Interactua con la casilla en la que esta parado.</string>
    <string name="casillas_interactuables">Casillas Interactuables</string>
    <string name="parada">Parada</string>
    <string name="meta">Meta</string>
    <string name="instrucciones">Instrucciones</string>
    <string name="nivel">Niveles</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="limpiar">limpiar</string>
    <string name="_6">6</string>
    <string name="_5">5</string>
    <string name="sub_Intrucciones">Ayuda al Tatú carreta\na llegar a su casa.</string>
</resources>
