<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Instrucciones">

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/imagen"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/fondo_app" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/imagen"
        app:layout_constraintBottom_toBottomOf="@+id/textView12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/ivLeft"
        app:srcCompat="@drawable/recuadro" />

    <ImageView
        android:id="@+id/ivLeft"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/imagen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.08"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        app:srcCompat="@drawable/left" />

    <ImageView
        android:id="@+id/ivForward"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/imagen"
        app:layout_constraintStart_toStartOf="@+id/ivLeft"
        app:layout_constraintTop_toBottomOf="@+id/ivLeft"
        app:srcCompat="@drawable/forward" />

    <ImageView
        android:id="@+id/ivRight"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/imagen"
        app:layout_constraintStart_toStartOf="@+id/ivForward"
        app:layout_constraintTop_toBottomOf="@+id/ivForward"
        app:srcCompat="@drawable/right" />

    <ImageView
        android:id="@+id/ivSel"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/imagen"
        app:layout_constraintStart_toStartOf="@+id/ivRight"
        app:layout_constraintTop_toBottomOf="@+id/ivRight"
        app:srcCompat="@drawable/sel" />

    <ImageView
        android:id="@+id/ivMeta"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/imagen"
        app:layout_constraintEnd_toEndOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:srcCompat="@drawable/meta" />

    <ImageView
        android:id="@+id/ivParada"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/imagen"
        app:layout_constraintStart_toStartOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:srcCompat="@drawable/parada" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/comandos"
        android:textColor="@color/colorPrimaryLight"
        android:textSize="40sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_marginStart="8dp"
        android:text="@string/ins_izquierda"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/ivLeft"
        app:layout_constraintStart_toEndOf="@+id/ivLeft"
        app:layout_constraintTop_toTopOf="@+id/ivLeft" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_marginStart="8dp"
        android:text="@string/ins_adelante"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/ivForward"
        app:layout_constraintStart_toEndOf="@+id/ivForward"
        app:layout_constraintTop_toTopOf="@+id/ivForward" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_marginStart="8dp"
        android:text="@string/ins_derecha"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/ivRight"
        app:layout_constraintStart_toEndOf="@+id/ivRight"
        app:layout_constraintTop_toTopOf="@+id/ivRight" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_marginStart="8dp"
        android:text="@string/ins_interactuar"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/ivSel"
        app:layout_constraintStart_toEndOf="@+id/ivSel"
        app:layout_constraintTop_toTopOf="@+id/ivSel" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/casillas_interactuables"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivSel" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/parada"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/ivParada"
        app:layout_constraintStart_toStartOf="@+id/ivParada"
        app:layout_constraintTop_toBottomOf="@+id/ivParada" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/meta"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/ivMeta"
        app:layout_constraintStart_toStartOf="@+id/ivMeta"
        app:layout_constraintTop_toBottomOf="@+id/ivMeta" />

    <Button
        android:id="@+id/btnJugar"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/jugar"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#FFFFFF"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/imageView6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView9"
        tools:layout_conversion_absoluteHeight="48dp"
        tools:layout_conversion_absoluteWidth="312dp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/sub_Intrucciones"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryLight"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

</androidx.constraintlayout.widget.ConstraintLayout>